==> FreeRTOS/FreeRTOS-Partner-Supported-Demos/AURIX_TC375_ADS/iLLD_TC375_ADS_KernelPort_Tests/RegTests.c <==
#include "Ifx_Types.h"
#include <stdio.h>
#include "FreeRTOS.h"
#include "task.h"
#include "RegTests.h"

static void prvRegisterTest1Task( void *pvParameters )
{
    /* Value written into all registers (decremented at each iteration) */
    static uint32_t value_in = 0xFFFFFFF;

    /* Values read from the Lower Context Registers will be read into these variables... */
    static uint32_t d0_out = 0, d1_out = 0, d6_out = 0, d7_out = 0;

    /* Values read from the Upper Context Registers will be read into these variables... */
    static uint32_t d8_out = 0, d9_out = 0, d14_out = 0, d15_out = 0;

    /* Will be set to TRUE if there is a mismatch in value read back from any register */
    static boolean mismatch = FALSE;

    ( void ) pvParameters;

    vTaskDelay(pdMS_TO_TICKS(100));
    printf("prvRegisterTest1Task() start...\r\n");
    vTaskDelay(pdMS_TO_TICKS(100));

    for( ; ; )
    {
        mismatch = FALSE;

        /* Write to Lower Context Registers */
        __asm("LD.W d0,[%0]" : : "a" (&value_in));
        __asm("LD.W d1,[%0]" : : "a" (&value_in));
        __asm("LD.W d6,[%0]" : : "a" (&value_in));
        __asm("LD.W d7,[%0]" : : "a" (&value_in));

        /* Write to Upper Context Register */
        __asm("LD.W d8,[%0]" : : "a" (&value_in));
        __asm("LD.W d9,[%0]" : : "a" (&value_in));
        __asm("LD.W d14,[%0]" : : "a" (&value_in));
        __asm("LD.W d15,[%0]" : : "a" (&value_in));

        /* Force context switch */
        taskYIELD();

        /* Read Lower Context Registers */
        __asm("st.w [%0],d0" : : "a" (&d0_out));
        __asm("st.w [%0],d1" : : "a" (&d1_out));
        __asm("st.w [%0],d6" : : "a" (&d6_out));
        __asm("st.w [%0],d7" : : "a" (&d7_out));

        /* Read Upper Context Registers */
        __asm("st.w [%0],d8" : : "a" (&d8_out));
        __asm("st.w [%0],d9" : : "a" (&d9_out));
        __asm("st.w [%0],d14" : : "a" (&d14_out));
        __asm("st.w [%0],d15" : : "a" (&d15_out));


        if (d0_out != value_in) {
            printf("D[0] mismatch: 0x%X != 0x%X\r\n", value_in, d0_out);
            mismatch = TRUE;
        }

        if (d1_out != value_in) {
            printf("D[1] mismatch: 0x%X != 0x%X\r\n", value_in, d1_out);
            mismatch = TRUE;
        }

        if (d6_out != value_in) {
            printf("D[6] mismatch: 0x%X != 0x%X\r\n", value_in, d6_out);
            mismatch = TRUE;
        }

        if (d7_out != value_in) {
            printf("D[7] mismatch: 0x%X != 0x%X\r\n", value_in, d7_out);
            mismatch = TRUE;
        }

        if (d8_out != value_in) {
            printf("D[8] mismatch: 0x%X != 0x%X\r\n", value_in, d8_out);
            mismatch = TRUE;
        }

        if (d9_out != value_in) {
            printf("D[9] mismatch: 0x%X != 0x%X\r\n", value_in, d9_out);
            mismatch = TRUE;
        }

        if (d14_out != value_in) {
            printf("D[14] mismatch: 0x%X != 0x%X\r\n", value_in, d14_out);
            mismatch = TRUE;
        }

        if (d15_out != value_in) {
            printf("D[7] mismatch: 0x%X != 0x%X\r\n", value_in, d15_out);
            mismatch = TRUE;
        }

        if (!mismatch) {
            ulRegisterTest1Counter++;
        }
    }
}

static void prvRegisterTest2Task( void *pvParameters )
{
    /* Value written into all registers (decremented at each iteration) */
    static uint32_t value_in = 0xFFFFFFF;

    /* Values read from the Lower Context Registers will be read into these variables... */
    static uint32_t d0_out = 0, d1_out = 0, d6_out = 0, d7_out = 0;

    /* Values read from the Upper Context Registers will be read into these variables... */
    static uint32_t d8_out = 0, d9_out = 0, d14_out = 0, d15_out = 0;

    /* Will be set to TRUE if there is a mismatch in value read back from any register */
    static boolean mismatch = FALSE;

    ( void ) pvParameters;

    vTaskDelay(pdMS_TO_TICKS(200));
    printf("prvRegisterTest2Task() start...\r\n");
    vTaskDelay(pdMS_TO_TICKS(200));

    for( ; ; )
    {
        mismatch = FALSE;

        /* Write to Lower Context Registers */
        __asm("LD.W d0,[%0]" : : "a" (&value_in));
        __asm("LD.W d1,[%0]" : : "a" (&value_in));
        __asm("LD.W d6,[%0]" : : "a" (&value_in));
        __asm("LD.W d7,[%0]" : : "a" (&value_in));

        /* Write to Upper Context Register */
        __asm("LD.W d8,[%0]" : : "a" (&value_in));
        __asm("LD.W d9,[%0]" : : "a" (&value_in));
        __asm("LD.W d14,[%0]" : : "a" (&value_in));
        __asm("LD.W d15,[%0]" : : "a" (&value_in));

        /* Force context switch */
        taskYIELD();

        /* Read Lower Context Registers */
        __asm("st.w [%0],d0" : : "a" (&d0_out));
        __asm("st.w [%0],d1" : : "a" (&d1_out));
        __asm("st.w [%0],d6" : : "a" (&d6_out));
        __asm("st.w [%0],d7" : : "a" (&d7_out));

        /* Read Upper Context Registers */
        __asm("st.w [%0],d8" : : "a" (&d8_out));
        __asm("st.w [%0],d9" : : "a" (&d9_out));
        __asm("st.w [%0],d14" : : "a" (&d14_out));
        __asm("st.w [%0],d15" : : "a" (&d15_out));


        if (d0_out != value_in) {
            printf("D[0] mismatch: 0x%X != 0x%X\r\n", value_in, d0_out);
            mismatch = TRUE;
        }

        if (d1_out != value_in) {
            printf("D[1] mismatch: 0x%X != 0x%X\r\n", value_in, d1_out);
            mismatch = TRUE;
        }

        if (d6_out != value_in) {
            printf("D[6] mismatch: 0x%X != 0x%X\r\n", value_in, d6_out);
            mismatch = TRUE;
        }

        if (d7_out != value_in) {
            printf("D[7] mismatch: 0x%X != 0x%X\r\n", value_in, d7_out);
            mismatch = TRUE;
        }

        if (d8_out != value_in) {
            printf("D[8] mismatch: 0x%X != 0x%X\r\n", value_in, d8_out);
            mismatch = TRUE;
        }

        if (d9_out != value_in) {
            printf("D[9] mismatch: 0x%X != 0x%X\r\n", value_in, d9_out);
            mismatch = TRUE;
        }

        if (d14_out != value_in) {
            printf("D[14] mismatch: 0x%X != 0x%X\r\n", value_in, d14_out);
            mismatch = TRUE;
        }

        if (d15_out != value_in) {
            printf("D[7] mismatch: 0x%X != 0x%X\r\n", value_in, d15_out);
            mismatch = TRUE;
        }

        if (!mismatch) {
            ulRegisterTest2Counter++;
        }
    }
}
